# ledzephyr

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  API_ENDPOINTS.md  BACKLOG_AI_WORKS_ALIGNMENT.md  CLAUDE.md  CODE_CLEANUP_SUMMARY.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DOCUMENTATION.md  Dockerfile  EPISTEMOLOGY.md  EXECUTIVE_SUMMARY.md  FEEDBACK.md  FOWLER_ASSESSMENT.md  JIRA_ACTION_PLAN.md  JIRA_MECE_VALIDATION.md  JIRA_UPDATE.md  JIRA_WORK_ITEMS_MECE.md  LEAN_REDESIGN.md  Makefile  PAIRWISE_EXECUTION_PLAN.md  PAIRWISE_REFERENCE.md  PAIRWISE_SUMMARY.txt  PAIRWISE_TEST_MATRIX.md  README.md  README_PAIRWISE_MATRIX.md  REPOSITORY_ANALYSIS.md  SECURITY.md  STRATEGIC_ANALYSIS_AI_WORKS.md  SUPPORT.md  SYMPHONIC_PRINCIPLES.MD  TDM_IMPLEMENTATION.md  TEST_ARCHITECTURE_DIAGRAM.txt  TEST_CLASSIFICATION_GUIDE.md  TEST_COVERAGE_REPORT.md  TEST_EXECUTION_REPORT.md  TEST_FRAMEWORK_INDEX.md  TEST_FRAMEWORK_SUMMARY.txt  (+31 more)
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/actions/setup-python-poetry/: action.yml
.github/workflows/: README.md  cd.yml  ci.yml  coordinator-agent.yml  coordinator.yml  debug-logs.yml  doc-sync.yml  github-ai-assessment.yml  lean-ci.yml  orchestrator-master.yml  parallel-performance-testing.yml  parallel-testing-matrix.yml  rail-1-core-business-logic.yml  rail-2-infrastructure-services.yml  rail-3-external-integrations.yml  test-e2e.yml  test-integration.yml  test-logs.yml  test-matrix.yml  test-performance.yml  test-unit.yml
.hypothesis/examples/000fbb120a2654a9/: 0136d0766f267f27  26cd36ea07964801  2e8d41f30f55bef7  455581f495766a2c  4b5c2c0e420b4c09  53901875b5a4c71b  68dbc36b8cb91668  825d1afb6b2e5efb  88141df303e4d48a  9b810fe5e65e4eec  a791e2c7e770ac97  d3ab6dea5dd6519b  ec478f7965095b88  f2c619b264fd460c  fe31910e3a867965
.hypothesis/examples/228d20e7383880ad/: abbf92ebd7846eac
.hypothesis/examples/2c7e8e57f1c8477b/: b411e16e27b4a28d
.hypothesis/examples/74f5c4b996cddba0/: b9d49a0fc696c9c0
.hypothesis/examples/b12f45b2a577afa0/: 757135b7ef54fb06
.hypothesis/examples/de895903d80c1bda/: 1168aac4e8bb3f4e  14f703db6d1c4b9b  45969af2c038b1f6  53954e3f40680e17  7083de935bdadb80  b55e627801c0fb3d  bfda8878f4f2c25b  d9556ef06bacf447  fb168de99e01aa33
.metrics/: history.jsonl
dev/: logs
docs/: ARCHITECTURE.md  DEPLOYMENT.md  README.md  STREAMLINED.md  confluence-documentation-update.md  github-actions-secrets-setup.md  github-actions-workflows.md  github-workflows-inventory.md  jira-work-items-update.md  logs.md  parallel-github-actions-architecture.md  project-status-update.md  project-structure.md  secrets-quick-reference.md  system-synchronization-checklist.md
gold/: gold_master.csv  gold_master.parquet
k8s/: deployment.yaml
ledzephyr/: __init__.py  __main__.py  cli.py  client.py  config.py  main.py  metrics.py
ledzephyr/converters/: __init__.py  contracts.py  zephyr_qtest.py
monitoring/: alerts.yml  grafana-dashboard.json  prometheus.yml
scripts/: check-architecture.py  check-dependencies.py  dev-logs.sh  measure-coupling.py  metrics-track.sh  sync-docs.sh  sync-verify.sh  tdm.sh  test-grep-escape.sh  test-lnav-check.sh  test-no-logs.sh  test-runner.sh  test-workflows.py  validate-interfaces.py  validate-workflows.py
src/ledzephyr/: __init__.py  adoption_metrics.py  adoption_report.py  cache.py  cli.py  client.py  config.py  error_handler.py  exporters.py  identity_resolution.py  metrics.py  models.py  monitoring_api.py  observability.py  rate_limiter.py  time_windows.py  training_impact.py  validators.py
src/migrate_specs/: __init__.py  config.py  fetch.py  gold.py  parse.py  synth.py
tdm/: README.md
tdm/schema/: manifest.schema.json
tdm/tools/: validate_manifest.py
testdata/: README.md
testdata/cassettes/: jira_demo_project.yaml
testdata/fixtures/: math_input_basic.json  math_input_edge_cases.json  math_input_large_dataset.json  math_output_edge_cases.json  math_output_golden.json  math_output_large_dataset.json
testdata/manifests/: demo_project_2025q2.yaml
tests/: README.md  __init__.py  conftest.py  run_all_tests.py  test_cli.py  test_config.py  test_contract.py  test_dev_logs.sh  test_e2e.md  test_integration.py  test_log_format.py  test_properties.py  test_time_windows.py  test_unit.py  test_zephyr_qtest_converter.py
tests/benchmarks/: test_performance_benchmarks.py
tests/e2e/: test_manifest_driven_replay.py  test_manifest_replay.py
tests/evidence/: evidence_1758485405.json  evidence_1758485428.json  evidence_1758489402.json  evidence_1758499520.json  evidence_1758506050.json  evidence_1758506121.json  evidence_1758506289.json  test_report.md
tests/integration/: test_cli_integration.py  test_contract_validation.py  test_gold_master_algorithms.py  test_gold_master_pipeline.py  test_mock_services.py  test_monitoring_api.py  test_pull_with_stubs.py  test_schools_integration.py
tests/integration/doubles/: __init__.py  contract_tester.py  fake_jira.py  spy_transport.py  stub_jira.py  stub_qtest.py  stub_zephyr.py  vcr_replay.py
tests/integration/schools/: __init__.py  api_school.py  cli.py  config_school.py  data_school.py  metrics.py  performance_school.py  runner.py
tests/shell/: test_determinism.sh  test_dev_logs.sh  test_log_format.sh
tests/specs/: download_specs.py  jira-api.json  qtest-api.json  test_fetch.py  test_gold.py  test_parse.py  test_synth.py  zephyr-api.json
tests/strategies/: __init__.py  adversarial_strategies.py  config_strategies.py  project_strategies.py
tests/tdm/: __init__.py  data_masker.py  gold_master_generator.py  manifest.json  manifest_schema.py  quality_gates.py
tests/tdm/gold_master/: gold_jira_complete.json  gold_jira_edge_cases.json  gold_jira_fresh.json  gold_jira_in_progress.json  gold_jira_team_based.json  gold_master_manifest.json  gold_qtest_complete.json  gold_qtest_edge_cases.json  gold_qtest_fresh.json  gold_qtest_in_progress.json  gold_qtest_team_based.json  gold_summary_complete.json  (+9 more)
tests/unit/: test_math_golden.py
tools/lnav/: lnav_config.json  prepare.sh
(+27 files in other folders)
